# comfyg

./: Cargo.toml  LICENSE  README.md  test.txt
src/: lib.rs  main.rs
src/types/: bool.rs  color.rs  mod.rs  number.rs  string.rs
